--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ html {
 body {
   overflow-x: hidden;
 }
+body.modal-open {
+  overflow-y: hidden;
+}
 li {
   list-style: none;
 }
@@ -66,7 +69,7 @@ li {
 .copy {
   text-align: center;
   width: 80%;
-  z-index: 15;
+  z-index: 150;
 }
 .copy p {
   color: #fff;
@@ -74,6 +77,15 @@ li {
   font-size: 40px;
   font-family: cursive;
   letter-spacing: 0.2em;
+}
+@media screen and (max-width:767px) {
+  .copy p {
+    color: #fff;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: cursive;
+    letter-spacing: 0.2em;
+  }
 }
 .card-width {
   width: 250px;
@@ -105,6 +117,7 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 .light-box-popup.light-box-open {
   visibility: visible;
