--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@ html {
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  position: relative;
+}
 body {
   overflow-x: hidden;
 }
@@ -75,17 +82,18 @@ li {
   color: #fff;
   font-weight: bold;
   font-size: 40px;
-  font-family: cursive;
   letter-spacing: 0.2em;
 }
-@media screen and (max-width:767px) {
+@media screen and (max-width: 767px) {
   .copy p {
     color: #fff;
     font-weight: bold;
     font-size: 20px;
-    font-family: cursive;
     letter-spacing: 0.2em;
   }
+}
+.oshare-font {
+  font-family: "Shippori Mincho", serif;
 }
 .card-width {
   width: 250px;
@@ -95,33 +103,60 @@ li {
   margin-left: 0px;
   padding-left: 0px;
 }
+
 .bg-gray-clear {
   width: 100%;
   height: 100vh;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.643);
-  cursor: pointer;
   top: 0;
   left: 0;
+  background-color: rgba(0, 0, 0, 0.643);
+  cursor: pointer;
+  z-index: 99999999;
 }
 .light-box-popup {
   width: 100%;
   height: 100%;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  transition: opacity 0.5s ease, visibility 0.5s ease;
-  visibility: hidden;
   position: fixed;
-  z-index: 100000001;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+  z-index: 100000000;
 }
 .light-box-popup.light-box-open {
   visibility: visible;
   opacity: 1;
+}
+@media screen and (max-width: 767px) {
+  .bg-gray-clear {
+    width: 100%;
+    height: 100%; /* 100vhではなく、100%に変更してみる */
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.643);
+    cursor: pointer;
+    z-index: 99999999;
+  }
+  .light-box-popup {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+    z-index: 100000000;
+  }
 }
 .light-box-popup .light-box-popup-in {
   width: 300px;
@@ -131,7 +166,7 @@ li {
   overflow-y: scroll;
   overflow-x: hidden;
   animation: fadeInScale 0.5s ease;
-  z-index: 100000002;
+  z-index: 200000002;
   box-shadow: 0 0 10px 1px white;
 }
 .light-box-popup .light-box-popup-in-img {
